# CSSE2310_Rust

./: .gitignore  Cargo.toml  README.md  check_func_length.sh  ratsclient  ratsserver  ratsserver_all_pass_left_14.2.c  testa1.sh  testa1_rust.sh  testa4_rust.sh  uqentropy  uqentropy.c
a1_2024_s2/: Cargo.toml  Makefile  testa1_rust.sh
a1_2024_s2/docs/src/: introduction.md  setup.md  testing.md
a1_2024_s2/src/: error.rs  lib.rs
a1_2024_s2/src/utils/: log.rs
a1_2024_s2/testfiles/: 10.2.file  10.2.stdout  10.3.stdout  10.4.stdout  11.1.file  11.1.stdout  11.3.stdout  11.4.file  3.10.stdout  4.2.stdout  4.3.in  5.2.stdout  5.4.stdout  5.5.stdout  5.8.in  6.1.stdout  6.3.in  6.3.stdout  6.4.stdout  6.6.file  6.6.stdout  7.2.stdout  7.4.in  7.4.stdout  8.2.stdout  8.3.stdout  8.4.stdout  9.3.in  9.5.in  9.5.stdout  REFERENCES
a1_2024_s2/testfiles/.definitions/: 1.1.definition  1.10.definition  1.12.definition  1.13.definition  (+35 more)
a1_2024_s2/tests/: uqentropy_test.rs
a4_2025_s2/: Cargo.toml  README.md  testa4_rust.sh
a4_2025_s2/docs/: book.toml
a4_2025_s2/src/: ratsclient.rs  ratsserver.rs  tcpclient.rs
a4_2025_s2/testfiles/: 10.1.commands  10.1.in  10.1.sequence  10.2.commands  10.4.sequence  10.6.sequence  11.1.sequence  11.2.job  12.1.commands  12.1.in  12.2.commands  12.3.commands  13.1.commands  13.1.sequence  13.2.commands  13.2.csse2310.totalthreadcount.txt  13.2.in  13.2.sequence  13.3.commands  13.4.commands  14.1.in  14.1.sequence  15.1.csse2310.activesocketcount.txt  15.1.csse2310.activethreadcount.txt  15.1.sequence  15.2.commands  15.2.csse2310.activethreadcount.txt  16.2.commands  16.3.commands  16.3.csse2310_a3_test_16.3.out  16.3.sequence  16.4.commands  16.4.sequence  17.1.commands  17.2.commands  17.3.commands  17.4.commands  19.1.sequence  19.3.sequence  19.4.sequence  (+50 more)
a4_2025_s2/tests/: run_all_tests.sh  test_server_handles_sighup.sh  test_server_port_in_use.sh
(+588 files in other folders)
