[package]
name = "a1_2024_s2"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uqentropy"
path = "src/bin/uqentropy.rs"

[dependencies]
log = "0.4"
env_logger = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.17"
anyhow = "1.0.100"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.0.3"

[lints.clippy]
too_many_lines = "warn"
