[package]
name = "a4_2025_s2"
version = "0.1.0"
edition = "2021"

[dependencies]
signal-hook = "0.3"
nix = { version = "0.29", features = ["process", "signal"] }
rand = "0.8"
parking_lot = "0.12"
libc = "0.2"

[dev-dependencies]
tempfile = "3.4"
tokio = { version = "1.28", features = ["full"] }

[[bin]]
name = "ratsclient"
path = "src/ratsclient.rs"

[[bin]]
name = "ratsserver"
path = "src/ratsserver.rs"

[[bin]]
name = "tcpserver"
path = "src/tcpserver.rs"

[[bin]]
name = "tcpclient"
path = "src/tcpclient.rs"

[[bin]]
name = "tokio_tcpserver"
path = "src/tokio_tcpserver.rs"

[[bin]]
name = "tokio_tcpclient"
path = "src/tokio_tcpclient.rs"
